[package]
name        = "ep-fitness"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[features]
default = []
ssr     = [
    "dep:axum", "dep:sqlx", "dep:tokio",
    "dep:ep-auth", "dep:time",
    "ep-core/ssr", "ep-auth/ssr",
    "ep-ui/ssr", "ep-i18n/ssr",
    "leptos/ssr",
]
hydrate = [
    "ep-core/hydrate", "ep-ui/hydrate", "ep-i18n/hydrate",
    "leptos/hydrate",
]

[dependencies]
ep-core    = { workspace = true }
ep-ui      = { workspace = true }
ep-i18n    = { workspace = true }

leptos       = { workspace = true }
serde        = { workspace = true }

ep-auth    = { workspace = true, optional = true }
time       = { workspace = true, optional = true }
axum       = { workspace = true, optional = true }
sqlx       = { workspace = true, optional = true }
tokio      = { workspace = true, optional = true }
