[package]
name        = "ep-marketplace"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }

[features]
default = []
ssr     = ["dep:axum", 
    "ep-core/ssr", "ep-ui/ssr",
    "leptos/ssr",
]
hydrate = [
    "ep-core/hydrate", "ep-ui/hydrate",
    "leptos/hydrate",
]

[dependencies]
ep-core    = { workspace = true }
ep-ui      = { workspace = true }

leptos        = { workspace = true }
axum  = { workspace = true, optional = true }
leptos_meta   = { workspace = true }
leptos_router = { workspace = true }
serde         = { workspace = true }
